--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <form>
     <label class="clabel">Alias </label><input class="cinput" type="text" id="reg_alias" value="carekiosk406@ck-collab-engtest.com" size=40 /><br/>
     <label class="clabel">Username </label><input class="cinput" type="text" id="reg_username" value="admin" size=40 /><br/>
-    <label class="clabel">Password </label><input class="cinput" type="password" id="reg_password" value="R3g1stR" size=40 /><br/>
+    <label class="clabel">Password </label><input class="cinput" type="password" id="reg_password" value="R3g!$tr" size=40 /><br/>
     <label class="clabel">Host </label><input class="cinput" type="text" id="reg_host" value="cklab-edgenc01.ck-collab-engtest.com" size=40 /><br/><br/>
     <input class="green cinput" id="register" type="button" onclick="reg.register()" value="Register" /><label id="regerror" class="red"></label><br/>
     </form>
